Reorder package.json

--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
+  "version": "0.77.0",
   "name": "react-gestalt-collage",
   "description": "Collage ported to TypeScript from pinterest/gestalt",
   "homepage": "https://github.com/Kronuz/react-gestalt-collage",
-  "version": "0.77.0",
   "license": "Apache-2.0",
   "main": "es/index.js",
   "jsnext:main": "es/index.js",
   "module": "es/index.js",
   "scripts": {
-    "build": "tsc"
+    "build": "tsc",
+    "prepublish": "npm run build"
   },
   "dependencies": {
     "prop-types": "^15.6.2"
